# riftdata

./: .dockerignore  .gitignore  .mcp.json  ARCHITECTURE.md  ARTICLE.pt-br.md  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  schema_report.md
.tmp_dagster_home_clvxm057/history/: runs.db  runs.db-shm  runs.db-wal
.tmp_dagster_home_clvxm057/history/runs/: .db  08a0b169-d1cc-4c24-acdd-0a2addb45e8e.db  2b774421-4c36-48ef-a486-6303f510c76a.db  4f489c7d-c617-414e-b1ed-1b9b10a8022e.db  index.db
.tmp_dagster_home_clvxm057/schedules/: schedules.db
config/: sample.yaml
data/_logs/151c0e9a/: silver_accounts.jsonl
data/_logs/2b774421-4c36-48ef-a486-6303f510c76a/: bronze_accounts.jsonl  bronze_league_entries.jsonl  bronze_match_ids.jsonl  bronze_summoners.jsonl
data/_logs/39815d3b/: silver_league.jsonl
scripts/: export_to_postgres.py  smoke.py  validate_gold.py
sql/: gold_schema.sql
src/datarift/: __init__.py  bronze_writer.py  config.py  definitions.py  extractors.py  gold_matchup.py  logging.py  riot_client.py  riot_client_models.py  runner.py  silver_league.py  silver_match.py  silver_timeline.py
tests/: conftest.py  test_bronze_writer.py  test_config.py  test_definitions.py  test_extractors.py  test_gold_matchup.py  test_logging.py  test_postgres_export.py  test_rate_limiter.py  test_runner.py  test_silver_league.py  test_silver_match.py  test_silver_timeline.py  test_smoke.py
tests/fixtures/: accounts.json  league_entries.json  match_details.json  match_details_10p.json  match_ids.json  match_timelines.json  summoners.json
(+179 files in other folders)
