[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "datarift"
version = "0.1.0"
description = "Riot Games data pipeline — async ingestion, rate limiting, and Delta Lake storage"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "structlog>=24.1",
    "polars>=1.0",
    "deltalake>=0.18",
    "pydantic>=2.0",
    "dagster>=1.7",
    "dagster-webserver>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["src/datarift"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "riot_live: tests that require a live Riot API key",
]
